--- a/index.html
+++ b/index.html
@@ -8,175 +8,7 @@
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
             rel="stylesheet"
         />
-        <style>
-            :root {
-                --bg: #f9fafb;
-                --text: #111827;
-                --primary: #2563eb;
-                --card-bg: #ffffff;
-                --shadow: rgba(0, 0, 0, 0.05) 0px 10px 15px;
-            }
-
-            * {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-
-            body {
-                font-family: "Inter", sans-serif;
-                background: var(--bg);
-                color: var(--text);
-                scroll-behavior: smooth;
-            }
-
-            header {
-                position: fixed;
-                top: 0;
-                width: 100%;
-                background: #fff;
-                box-shadow: var(--shadow);
-                z-index: 1000;
-            }
-
-            .navbar {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                max-width: 1200px;
-                margin: auto;
-                padding: 1rem;
-            }
-
-            .nav-links {
-                display: flex;
-                gap: 1.5rem;
-            }
-
-            .nav-links a {
-                text-decoration: none;
-                color: var(--text);
-                font-weight: 600;
-            }
-
-            .menu-toggle {
-                display: none;
-                flex-direction: column;
-                gap: 4px;
-                cursor: pointer;
-            }
-
-            .menu-toggle div {
-                width: 25px;
-                height: 3px;
-                background: var(--text);
-            }
-
-            .hero {
-                height: 100vh;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-                padding-top: 5rem;
-            }
-
-            .hero h1 {
-                font-size: 3rem;
-                font-weight: 800;
-                margin-bottom: 0.5rem;
-            }
-
-            .hero p {
-                font-size: 1.2rem;
-                color: #4b5563;
-            }
-
-            section {
-                max-width: 1100px;
-                margin: auto;
-                padding: 4rem 1rem;
-            }
-
-            h2 {
-                font-size: 2rem;
-                margin-bottom: 2rem;
-                text-align: center;
-            }
-
-            .projects {
-                display: grid;
-                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-                gap: 2rem;
-            }
-
-            .card {
-                background: var(--card-bg);
-                padding: 1.5rem;
-                border-radius: 1rem;
-                box-shadow: var(--shadow);
-                transition:
-                    transform 0.3s ease,
-                    box-shadow 0.3s ease;
-                opacity: 0;
-                transform: translateY(30px);
-            }
-
-            .card.visible {
-                opacity: 1;
-                transform: translateY(0);
-            }
-
-            .card:hover {
-                transform: translateY(-5px);
-                box-shadow: 0px 12px 20px rgba(0, 0, 0, 0.1);
-            }
-
-            .card h3 {
-                margin-bottom: 0.5rem;
-                color: var(--primary);
-            }
-
-            .skills span {
-                display: inline-block;
-                background: #e0e7ff;
-                color: #1e40af;
-                padding: 0.4rem 0.8rem;
-                border-radius: 0.5rem;
-                margin: 0.3rem;
-                font-weight: 600;
-            }
-
-            footer {
-                text-align: center;
-                padding: 2rem;
-                font-size: 0.9rem;
-                color: #6b7280;
-            }
-
-            @media (max-width: 768px) {
-                .nav-links {
-                    display: none;
-                    flex-direction: column;
-                    background: white;
-                    position: absolute;
-                    top: 60px;
-                    right: 1rem;
-                    padding: 1rem;
-                    border-radius: 8px;
-                    box-shadow: var(--shadow);
-                }
-
-                .nav-links.show {
-                    display: flex;
-                }
-
-                .menu-toggle {
-                    display: flex;
-                }
-            }
-        </style>
+        <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
         <header>
@@ -327,38 +159,6 @@
 
         <footer>&copy; 2025 Tasmir Hossain Zihad. All rights reserved.</footer>
 
-        <script>
-            function toggleMenu() {
-                document.getElementById("navLinks").classList.toggle("show");
-            }
-
-            const name = "Tasmir Hossain Zihad";
-            const nameContainer = document.getElementById("animatedName");
-            name.split("").forEach((char, i) => {
-                const span = document.createElement("span");
-                span.textContent = char;
-                span.style.opacity = 0;
-                span.style.transition = `opacity 0.3s ease ${i * 50}ms`;
-                nameContainer.appendChild(span);
-                setTimeout(() => (span.style.opacity = 1), i * 50);
-            });
-
-            const observer = new IntersectionObserver(
-                (entries) => {
-                    entries.forEach((entry) => {
-                        if (entry.isIntersecting) {
-                            entry.target.classList.add("visible");
-                        }
-                    });
-                },
-                {
-                    threshold: 0.1,
-                },
-            );
-
-            document
-                .querySelectorAll(".card")
-                .forEach((el) => observer.observe(el));
-        </script>
+        <script src="script.js"></script>
     </body>
 </html>
