refactor: reorganize CSS structure and add animation management; implement data loading utility

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<!-- Theming styles -->
 		<link rel="stylesheet" href="css/colors.css" />
 		<link rel="stylesheet" href="css/dark-theme.css" />
-		<!-- Component styles -->
-		<link rel="stylesheet" href="css/components.css" />
-		<!-- Layout styles -->
+		<!-- Animation definitions -->
+		<link rel="stylesheet" href="css/animation.css" />
+		<!-- Layout with animation references -->
 		<link rel="stylesheet" href="css/layout.css" />
 		<!-- Responsive styles -->
 		<link rel="stylesheet" href="css/tablet.css" />
